# paraxial-optics-analyzer

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.tape
examples/: cooke_triplet.yaml  singlet_bk7.yaml
src/paraxial_optics_analyzer/: analysis.py  cli.py  io.py  paraxial.py  prescription.py  raytrace.py  report.py  sampling.py  validate.py
tests/: conftest.py  test_analysis.py  test_cli_report.py  test_io.py  test_paraxial.py  test_prescription.py  test_raytrace.py  test_sampling.py  test_validate.py
