[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paraxial-optics-analyzer"
version = "0.1.0"
description = "Scriptable sequential ray tracing and image-quality analysis — a tiny open-source Zemax-style tool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Josef" }]
keywords = ["optics", "ray-tracing", "lens-design", "paraxial", "zemax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.23",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
analyze = "paraxial_optics_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.egg-info", "build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E741",  # ambiguous variable names — optics math uses single-letter symbols (P, C, D, R, ...)
    "E501",  # line length — handled by formatter rather than as a hard error
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
